<resources>
    <string name="app_name">JournaLog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="font_preview">오늘은 고요한 저녁노을이 펼쳐지고, 차향이 방 안을 가득 채우고 있다. 손에 쥔 노트에 오늘 있었던 일과 느낀 점을 적고 싶어진다. 한순간의 여유를 즐기며 이 날의 기억을 영원히 간직하자.</string>
    <string name="preview">Preview</string>
    <string name="text_select">선택</string>
    <string name="theme_preview">추억의 장소에서 만나기로 약속했다. 아직 시간이 있다. 그 때까지 공원의 벤치에서 책을 읽을 것이다. 나무 사이로 비치는 햇빛 속에서 페이지를 넘길 때마다 새로운 세계에 빠져든다</string>
    <string name="close">닫기</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="calenderview">캘린더 화면 설정</string>
    <string name="weekstart">한 주의 시작을</string>
    <string name="timeorder">시간순</string>
    <string name="timedisplay">시간 보기</string>
    <string name="calendardisplay">캘린더 보기</string>
    <string name="normalsetting">일반 설정</string>
    <string name="language">언어</string>
</resources>